# FastApi_Class_Router

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev.md  example.py  pyproject.toml
.github/workflows/: ci.yml
exemples/: example.py  example_python_dependency_injector.py
src/fastapi_class_router/: __init__.py  core.py
tests/: conftest.py  test_class_router.py  test_delete_class_router.py  test_di_class_router.py  test_get_class_router.py  test_post_class_router.py
tests/unit/: conftest.py  test_class_router.py  test_di_class_router.py  test_get_class_router.py  test_patch_class_router.py  test_put_class_router.py
