[project]
name = "fastapi-class-router"
version = "0.1.1"
description = "FastApi_Class_Router is a lightweight yet powerful library for implementing class-based routing in FastAPI. It allows you to organise your API’s logic into classes, which significantly improves code structure, promotes component reusability and facilitates the implementation of dependency injection."
readme = "README.md"
authors = [
    { name = "sokirlov", email = "soxwhite@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]


[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_class_router"] # The py.typed file must be inside this folder

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double" # Use double quotes (Python standard)
indent-style = "space" # Use spaces instead of tabs
skip-magic-trailing-comma = false # Automatically add a comma at the end of long lists
docstring-code-format = true # Formatting docstrings

[tool.ruff.lint]
# Choosing rule sets:
# E (Error), F (Pyflakes), I (Isort), B (Bugbear), S (Security)
select = ["E", "F", "I", "B", "S", "UP"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "Depends"
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Enabling assert in tests

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
ignore_missing_imports = true # This is critical for your py.typed
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
