[project]
name = "fastapi-class-router"
version = "0.1.2"
description = "FastApi_Class_Router is a lightweight yet powerful library for implementing class-based routing in FastAPI. It allows you to organise your API’s logic into classes, which significantly improves code structure, promotes component reusability and facilitates the implementation of dependency injection."
readme = "README.md"
authors = [
    { name = "sokirlov", email = "soxwhite@gmail.com" }
]
license = { text = "MIT" }
keywords = ["fastapi", "router", "cbv", "class-based-views", "controller"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
[project.urls]
Homepage      = "https://github.com/Sokirlov/FastApi_Class_Router/"
Repository    = "https://github.com/Sokirlov/FastApi_Class_Router/"
"Bug Tracker" = "https://github.com/Sokirlov/FastApi_Class_Router/issues"

requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0"
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn>=0.42.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_class_router"] # The py.typed file must be inside this folder

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "exemples",
]

[tool.ruff.format]
quote-style = "double" # Use double quotes (Python standard)
indent-style = "space" # Use spaces instead of tabs
skip-magic-trailing-comma = false # Automatically add a comma at the end of long lists
docstring-code-format = true # Formatting docstrings

[tool.ruff.lint]
# Choosing rule sets:
# E (Error), F (Pyflakes), I (Isort), B (Bugbear), S (Security)
select = ["E", "F", "I", "B", "S", "UP"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "Depends"
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Enabling assert in tests


[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
ignore_missing_imports = true # This is critical for your py.typed
explicit_package_bases = true
namespace_packages = true
exclude = ["exemples",]


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
